Bump commons-io:commons-io from 2.11.0 to 2.17.0 (#677)
* Bump commons-io:commons-io from 2.11.0 to 2.17.0

Bumps commons-io:commons-io from 2.11.0 to 2.17.0.

---
updated-dependencies:
- dependency-name: commons-io:commons-io
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* FIX: remove unused test only dependency

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Mark Rees <mark.rees@digital.justice.gov.uk>
Co-authored-by: Abdirizak Obsiye <Obsiye@users.noreply.github.com>